# botfunder-net

./: .gitignore  README.md
api/: Cargo.toml  wrangler.toml
api/src/: lib.rs
application/: Switch-Explorer.html  Switch-System-Info.html  Switch-System-Info.pck  index.html  index.js  info.js  main.tscn  project.godot  wrangler.jsonc
source/: botfunder_presents.gd  botfunder_presents.gd.uid  botfunder_presents.tscn  broomba.gd  broomba.gd.uid  broomba.tscn  broomba_char.gd.uid  chopper.tscn  export_presets.cfg  icon.svg.import  main.gd  main.gd.uid  main.tscn  overworld.gd  overworld.gd.uid  overworld.tscn  project.godot
source/backgrounds/: README  Roboto-Bold.ttf.import  background.gdshader  background.gdshader.uid  blurry-white.png.import  blurry.png.import  highlights.png.import  pcb-lower.jpg.import  pcb-lower.png.import  skill-desc_0000_foreground.png.import  skill-desc_0001_buildings.png.import  skill-desc_0002_far-buildings.png.import  skill-desc_0003_bg.png.import
source/music/: ArcadeTrapLoop_cc_att_to_YipYep.mp3.import  ChipTune_cc_att_to_YipYep.mp3.import  GuitarFluteTrapLoop_cc_att_to_YipYep.mp3.import  OpeningTheme.mp3.import  OpeningTheme.txt  ShopTheme_cc0_milton.mp3.import
source/sprites/: broomba-sprites.png.import  broomba.png.import  chopper-base.png.import  chopper-tail-rotor-sheet.png.import  chopper-top-rotor-sheet.png.import
website/: index.css  index.html  index.js  wrangler.jsonc
